[EID-1627] fix tests and refactor